gitops/clusters/de/hetzner/cluster/apps/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: plaintext
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: tls
      port: 443
      protocol: HTTPS
      hostname: "*.internal.willpxxr.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: gateway-tls
      allowedRoutes:
        namespaces:
          from: All
