gitops/clusters/de/hetzner/cluster/apps/gateway/flux-operator-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-operator
  namespace: envoy-gateway-system
  annotations:
    tailscale.com/proxy-group: "ingress"
    tailscale.com/tags: "tag:admin-services"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - flux
  defaultBackend:
    service:
      name: envoy-envoy-gateway-system-gateway-4864c4ea
      port:
        number: 80
